@@ -54,7 +54,7 @@
 
 #ifndef __WCHAR_T_DEFINED
 #define __WCHAR_T_DEFINED
-  typedef char wchar_t;
+  typedef unsigned long int wchar_t;
 #endif
 
 /* Bounds-checking interfaces from annex K of the C11 standard. */
