@@ -108,7 +108,7 @@ CCR_RESULT;
 /* forward definitions for the symbol table related functions */
 value *newValue (void);
 value *constVal (const char *);
-value *constCharacterVal (unsigned long v, unsigned char type);
+value *constCharacterVal (unsigned long v, char type);
 value *constCharVal (unsigned char v);
 value *constBoolVal (bool v);
 value *reverseVal (value *);
